login and signup process added

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   @apply inline-flex items-center capitalize lg:text-base text-xs lg:px-6 md:px-4 px-3 lg:py-3 py-2  mb-3 font-medium text-white transition rounded border-none shadow-md md:mb-0  bg-rose-400  hover:bg-orange-400 duration-700;
 }
 .btn-sec {
-  @apply text-lg font-medium tracking-wide px-4 py-3 rounded drop-shadow-2xl border border-[#FF3811] text-[#FF3811] hover:text-white hover:bg-[#FF3811] duration-500;
+  @apply text-lg font-medium tracking-wide px-4 py-3 rounded drop-shadow-2xl border border-rose-400 text-rose-400 hover:text-white hover:bg-rose-400 duration-500;
 }
 
 .sub-header {
