latest toy section added to home page

--- a/src/pages/Home/Sections/Banners/Banners.css
+++ b/src/pages/Home/Sections/Banners/Banners.css
@@ -1,12 +1,12 @@
 .mySwiper .swiper-button-prev,
 .mySwiper .swiper-button-next {
-  color: rgba(246, 30, 149, 0.58) !important;
+  color: #FB7185 !important;
 }
 
 .mySwiper .swiper-pagination-bullet-active {
-  background-color: rgba(246, 30, 149, 0.58) !important;
+  background-color: #FB7185 !important;
 }
 
 .mySwiper .swiper-pagination-bullet {
-  background-color: rgba(246, 30, 149, 0.58) !important;
+  background-color: #FB7185 !important;
 }
